// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PathoscopeIsolate /> should render 1`] = `
<PathoscopeIsolate
  depth={13}
  maxDepth={22}
  name="Isolate A"
  onScroll={[MockFunction]}
  reads={102}
  sequences={
    Array [
      Object {
        "definition": "Foo Hit",
        "filled": Array [
          1,
          2,
          3,
          4,
          5,
        ],
        "id": "foo",
        "length": 5,
      },
      Object {
        "definition": "Bar Hit",
        "filled": Array [
          1,
          2,
          3,
          4,
          5,
          4,
          2,
          3,
        ],
        "id": "bar",
        "length": 8,
      },
    ]
  }
  showReads={false}
>
  <div>
    <Isolate__PathoscopeIsolateHeader>
      <div
        className="Isolate__PathoscopeIsolateHeader-sc-2hw4nu-2 kDplcs"
      >
        Isolate A
        <PathoscopeIsolateWeight
          reads={102}
          showReads={false}
        >
          <strong
            className="small text-success"
          >
            NaN
          </strong>
        </PathoscopeIsolateWeight>
        <strong
          className="small text-danger"
        >
          13
        </strong>
        <strong
          className="small text-primary"
        >
          NaN
        </strong>
      </div>
    </Isolate__PathoscopeIsolateHeader>
    <Isolate__PathoscopeChartContainer>
      <div
        className="Isolate__PathoscopeChartContainer-sc-2hw4nu-0 eyChHh"
      >
        <Isolate__PathoscopeChartRibbon>
          <div
            className="Isolate__PathoscopeChartRibbon-sc-2hw4nu-1 gcdAE"
          >
            <CoverageChart
              definition="Foo Hit"
              id="foo"
              key="0"
              length={5}
              showYAxis={true}
              yMax={22}
            >
              <Coverage__StyledCoverageChart>
                <div
                  className="Coverage__StyledCoverageChart-umswn9-0 fBJPhh"
                />
              </Coverage__StyledCoverageChart>
            </CoverageChart>
            <CoverageChart
              definition="Bar Hit"
              id="bar"
              key="1"
              length={8}
              showYAxis={false}
              yMax={22}
            >
              <Coverage__StyledCoverageChart>
                <div
                  className="Coverage__StyledCoverageChart-umswn9-0 fBJPhh"
                />
              </Coverage__StyledCoverageChart>
            </CoverageChart>
          </div>
        </Isolate__PathoscopeChartRibbon>
      </div>
    </Isolate__PathoscopeChartContainer>
  </div>
</PathoscopeIsolate>
`;

exports[`<PathoscopeIsolateWeight /> should render reads 1`] = `
<strong
  className="small text-success"
>
  121
</strong>
`;

exports[`<PathoscopeIsolateWeight /> should render weight 1`] = `
<strong
  className="small text-success"
>
  0.321
</strong>
`;

exports[`<PathoscopeIsolateWeight /> should render weight in scientific notation 1`] = `
<strong
  className="small text-success"
>
  3.21E-7
</strong>
`;
